deploy/api-gateway-zuul.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-gateway-zuul
  namespace: mics
spec:
  replicas: 3
  
  template:
    metadata:
      labels:
        app: api-gateway-zuul
    spec:
      containers:
        - name: api-gateway-zuul
          image: registry.cn-hangzhou.aliyuncs.com/zhangww/api-gateway-zuul:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9992
          lifecycle:
            preStop:
              exec:
                command: ["/usr/bin/curl","-X","POST", "http://localhost:9992/shutdown"]
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9992
              scheme: HTTP
            initialDelaySeconds: 300
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9992
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
          args:
            - --management.server.port=9992
            - --management.endpoints.web.exposure.include=*
            - --management.endpoint.health.show-details=always
            - --eureka.instance.health-check-url-path=/actuator/health
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-zuul
  namespace: mics
  labels:
    app: api-gateway-zuul
spec:
  ports:
    - port: 9992
      targetPort: 9992
  selector:
    app: api-gateway-zuul
   servicePort: 30040
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: mics
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: master
    http:
      paths:
      - path:
        backend:
          serviceName: api-gateway-zuul
          servicePort: 9992
